--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,21 @@
+body {
+  background-image:url('/src/images/kitchen-background.jpg');
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  height: 80%; /* change these for mobile aka media queries */
+}
+
+html {
+  height: 100%;
+}
+
+.band{
+  background-color: black;
+  opacity: 50%;
+}
+
 .header {
   text-align: center;
 }
