--- a/src/style.css
+++ b/src/style.css
@@ -30,11 +30,11 @@ html {
 }
 
 .staatliches{
-  font-family: Staatliches;
+  font-family: 'Staatliches';
 }
 
 .oswald{
-  font-family: Oswald;
+  font-family: 'Oswald', sans-serif;
 }
 
 .search-btn {
@@ -50,6 +50,38 @@ html {
   border: 3px solid darkorange;
 }
 
+.filter-no
+{
+  color: #f7f7f7;
+}
+
+.right{
+  max-width: '100%' ;
+  background-color: yellow;
+}
+
+.left{
+  max-width: '100%' ;
+  background-color: #f7f7f7;
+}
+
+.testest {
+position: absolute;
+}
+
+.stickyicky {
+position: sticky;
+ top: 0;
+}
+
+.side {
+  width: 16%;
+}
+
+.whitetext
+{
+  color: white;
+}
 
 
 @font-face {
