--- a/src/style.css
+++ b/src/style.css
@@ -11,13 +11,9 @@ html {
   height: 100%;
 }
 
-.band{
-  background-color: black;
-  opacity: 50%;
-}
-
-.header {
-  text-align: center;
+.responsive-image {
+  max-width: 100%;
+  height: auto;
 }
 
 .toast {
@@ -25,7 +21,7 @@ html {
 }
 
 .bottom {
-  margin-bottom: 200px;
+  margin-bottom: 30px;
 }
 
 .searchAndButtonSpace
@@ -37,12 +33,78 @@ html {
   font-family: Staatliches;
 }
 
-.searchbar {
+.oswald{
+  font-family: Oswald;
+}
+
+.search-btn {
   font-size: 30px;
   background-color: orange;
+  color: white;
+  border: 3px solid darkorange;
+  cursor: pointer;
 }
+
+.search-btn:hover{
+  background-color:darkorange ;
+  border: 3px solid darkorange;
+}
+
+.card_body{
+padding:40px;
+}
+
+.jumbotron_style{
+padding-top: 30px;
+text-align: center;
+}
+
+.recipeModal{
+padding:25px;
+}
+
+.list-styles{
+  margin-top: 10px;
+  list-style: none;
+}
+
+.steps{
+padding:10px;
+}
+.card_size{
+height: 100%;
+width: 100%;
+}
+
+.card_size_nutr{
+width:100%;
+height: 30%;
+}
+
+.recipe_heading{
+padding-top:20px;
+padding-bottom:20px;
+}
+
+.star_rating{
+height:20px;
+width:20px;
+}
+
+.background_black{
+background-color:black;
+padding:20px;
+}
+
+.background_white{
+color:black;
+background-color:white;
+padding: 10px;
+}
+
 
 
 @font-face {
   src: url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
+  src: url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 }
