--- a/src/style.css
+++ b/src/style.css
@@ -52,13 +52,14 @@ html {
 
 /*Faadhil's Part(END)*/
 .carousel{
-  width: 400px;
- height: 400px;
+  width: 300px;
+ height: 300px;
  object-fit: cover;
+ text-align: center;
+ padding-bottom: 20px;
 }
 
 .jumbotronInvis{
-  background:#887F7E;
 }
 
 .headerStyle{
